# drake

./: .gitmodules  CMakeLists.txt  addpath_drake.m  rmpath_drake.m
drake/: addpath_drake.m
examples/Atlas/: flipLeftRight.m  repeatTraj.m  runTrajOptPassiveAnkle.m  runTrajStabilizationPassiveAnkle.m
examples/BallCatch/: BallController.m  BallPlant.m  ball.urdf  ball_catch_roa.m  iter_0.mat  simBall.m
examples/BeanBag/: actuated_ground.urdf  actuated_ground_1d.m  compl_spring.m  hybrid_spring.m  pogo_moment.m  point_roa_1d.m  point_roa_2d.m  rod.m  sim_actuated_ground_1d.m  spring_point_2d_moment.m
examples/KneedCompassGait/: KneedCompassGait_nolimits.urdf  testColocatedTrajOpt.m
examples/RimlessTorso/: ReactionRimless.urdf  SkinnyTorsoBalance.urdf  TorsoBalance.urdf  WeightedSkinnyTorsoBalance.urdf  WeightedTorsoBalance.urdf  getTaylorEOM.m  reactionEOM_mss.m  reaction_roa_alternations.m  simTorso.m  skinnyEOM_mss.m  skinnyEnergySets.m  skinnyPolyEOM.m  skinny_controller_taylor_alternations.m  skinny_lowmu_vid_fullspeed.avi  skinny_roa_fixedform_fixedEllipses.m  skinny_taylor_eom.mat  skinny_torso_roa_alternations.m  torsoEOM_mss.m  torsoPolyEOM.m  torso_controller_taylor_alternations.m  torso_energy.mat  (+20 more)
examples/multibody/benchmarks/: BUILD.bazel  benchmark_acrobot_plants.cc  benchmark_kuka_plants.cc
mposatest/: mprw2.m  obssos.m  obstest.m  quadrottest.m  solveQPCC.m  stickSlipParticleTest.m  testIntegral.m
solvers/: CompositeConstraint.m  NonlinearProgramWConstraintObjects.m
util/: TaylorVar.m  TrigPoly.m  datapath.m  ddTjcalcpdot.m  linspacevec.m
(+196 files in other folders)
